Sintactico/sintactico_sin_semantica.output
Useless nonterminals

   declaracion_variable_simple_vector


Terminals which are not used

   CONSTANT
   COMMENT
   CONST
   ELSE
   ESPACIO


Useless rules

  162 declaracion_variable_simple_vector: tipo IDENTIFICATOR


Grammar

    0 $accept: programa $end

    1 tipo: VOID
    2     | FLOAT
    3     | CHAR
    4     | DOUBLE
    5     | INT

    6 declaraciones_variables_struct: declaracion_variables_struct
    7                               | declaraciones_variables_struct declaracion_variables_struct

    8 identificadores_struct: identificador
    9                       | identificador corchetes
   10                       | MULTOP identificador
   11                       | identificador mas_identificadores_struct COLON identificador
   12                       | identificador mas_identificadores_struct COLON identificador corchetes
   13                       | identificador mas_identificadores_struct COLON MULTOP identificador
   14                       | /* empty */

   15 mas_identificadores_struct: mas_identificadores_struct COLON identificador
   16                           | mas_identificadores_struct COLON identificador corchetes
   17                           | mas_identificadores_struct COLON MULTOP identificador
   18                           | /* empty */

   19 especificacion_struct_o_union: struct_o_union identificador
   20                              | struct_o_union LKEY declaraciones_variables_struct RKEY identificadores_struct SEMICOLON

   21 struct_o_union: STRUCT
   22               | UNION

   23 programa: declaraciones

   24 parametro: declaracion_variable_simple_parametro
   25          | declaracion_variable_simple_parametro corchetes
   26          | struct_o_union identificador identificador

   27 paso_parametros: parametro
   28                | paso_parametros COLON parametro

   29 definicion_tipo: TYPEDEF declaracion_variables

   30 declaracion_funcion: tipo IDENTIFICATOR LPARENT paso_parametros RPARENT LKEY posible_declaraciones_variables lista_sentencias RKEY
   31                    | tipo IDENTIFICATOR LPARENT RPARENT LKEY posible_declaraciones_variables lista_sentencias RKEY

   32 declaraciones: declaraciones declaracion_funcion
   33              | declaraciones declaracion_variables
   34              | declaraciones definicion_tipo
   35              | /* empty */

   36 declaraciones_variables: declaracion_variables declaraciones_variables
   37                        | declaracion_variables

   38 posible_declaraciones_variables: declaraciones_variables
   39                                | /* empty */

   40 sentencia: sentencias_control
   41          | sentencias_salto
   42          | sentencias_etiquetas
   43          | sentencias_expresiones

   44 lista_sentencias: sentencia
   45                 | lista_sentencias sentencia

   46 sentencias_control: sentencia_while
   47                   | sentencia_if
   48                   | sentencia_for
   49                   | sentencia_switch
   50                   | sentencia_do_while

   51 sentencias_salto: BREAK SEMICOLON
   52                 | GOTO identificador SEMICOLON
   53                 | RETURN SEMICOLON
   54                 | RETURN expresion SEMICOLON

   55 sentencias_etiquetas: identificador TWOPOINT sentencia
   56                     | CASE NUMERO TWOPOINT LKEY lista_sentencias RKEY

   57 sentencias_expresiones: SEMICOLON
   58                       | expresion SEMICOLON

   59 inicializador: identificador
   60              | LKEY lista_inicializador RKEY
   61              | LKEY lista_inicializador COLON RKEY

   62 lista_inicializador: inicializador
   63                    | lista_inicializador COLON inicializador

   64 corchetes: LCORCH NUMERO RCORCH
   65          | corchetes LCORCH NUMERO RCORCH
   66          | LCORCH RCORCH
   67          | corchetes LCORCH RCORCH

   68 declaracion_variable_simple_parametro: tipo IDENTIFICATOR
   69                                      | tipo MULTOP IDENTIFICATOR

   70 declaracion_variable_simple_struct: tipo IDENTIFICATOR
   71                                   | tipo MULTOP IDENTIFICATOR

   72 declaracion_variable_simple: tipo IDENTIFICATOR
   73                            | tipo MULTOP IDENTIFICATOR

   74 mas_identificadores: mas_identificadores COLON IDENTIFICATOR
   75                    | mas_identificadores COLON IDENTIFICATOR corchetes
   76                    | mas_identificadores COLON MULTOP IDENTIFICATOR
   77                    | /* empty */

   78 declaracion_struct_struct: struct_o_union IDENTIFICATOR IDENTIFICATOR

   79 declaracion_variables_struct: declaracion_variable_simple_struct SEMICOLON
   80                             | declaracion_variable_simple_struct corchetes mas_identificadores SEMICOLON
   81                             | declaracion_struct_struct SEMICOLON

   82 declaracion_variables: declaracion_variable_simple mas_identificadores SEMICOLON
   83                      | declaracion_variable_simple ASIGOP expresion SEMICOLON
   84                      | declaracion_variable_simple corchetes mas_identificadores SEMICOLON
   85                      | declaracion_variable_simple corchetes ASIGOP inicializador SEMICOLON
   86                      | especificacion_struct_o_union

   87 sentencia_if: IF LPARENT expresion RPARENT LKEY lista_sentencias RKEY

   88 sentencia_do_while: DO LKEY lista_sentencias RKEY WHILE LPARENT expresion RPARENT SEMICOLON

   89 sentencia_switch: SWITCH LPARENT expresion RPARENT LKEY muchas_sentencias_etiquetas RKEY

   90 muchas_sentencias_etiquetas: sentencias_etiquetas muchas_sentencias_etiquetas
   91                            | DEFAULT TWOPOINT LKEY lista_sentencias RKEY
   92                            | /* empty */

   93 sentencia_while: WHILE LPARENT expresion RPARENT LKEY lista_sentencias RKEY

   94 posible_expresion: expresion
   95                  | /* empty */

   96 sentencia_for: FOR LPARENT posible_expresion SEMICOLON posible_expresion SEMICOLON posible_expresion RPARENT LKEY lista_sentencias RKEY

   97 operador_unario: ANDOP
   98                | MULTOP
   99                | VIRGUOP
  100                | NOTOP

  101 expresion_cast: expresion_unaria
  102               | LPARENT tipo RPARENT expresion_cast

  103 expresion_primaria: identificador
  104                   | NUMERO
  105                   | STRING
  106                   | STRING_C
  107                   | LPARENT expresion RPARENT
  108                   | CARACTER

  109 expresion_asignable: expresion_primaria
  110                    | IDENTIFICATOR LCORCH expresion_vector RCORCH posible_matriz
  111                    | expresion_asignable POINT identificador

  112 posible_matriz: LCORCH expresion_vector RCORCH
  113               | /* empty */

  114 expresion_unaria: expresion_asignable
  115                 | operador_unario IDENTIFICATOR
  116                 | expresion_unaria INC
  117                 | expresion_unaria DEC
  118                 | INC expresion_asignable
  119                 | DEC expresion_asignable

  120 operador_asignacion: ASIGOP
  121                    | PRODASIGOP
  122                    | DIVASIGOP
  123                    | MODASIGOP
  124                    | SUMASIGOP
  125                    | RESASIGOP

  126 expresion_multiplicativa: expresion_cast
  127                         | expresion_multiplicativa MULTOP expresion_cast
  128                         | expresion_multiplicativa DIVOP expresion_cast
  129                         | expresion_multiplicativa MODOP expresion_cast

  130 expresion_aditiva: expresion_multiplicativa
  131                  | expresion_aditiva ADDOP expresion_multiplicativa
  132                  | expresion_aditiva MINUSOP expresion_multiplicativa

  133 expresion_shift: expresion_aditiva
  134                | expresion_shift LDESP expresion_aditiva
  135                | expresion_shift RDESP expresion_aditiva

  136 expresion_relacional: expresion_shift
  137                     | expresion_relacional LOWOP expresion_shift
  138                     | expresion_relacional GREATOP expresion_shift
  139                     | expresion_relacional LOWEQOP expresion_shift
  140                     | expresion_relacional GREATEQOP expresion_shift

  141 expresion_igualdad: expresion_relacional
  142                   | expresion_igualdad EQUOP expresion_relacional
  143                   | expresion_igualdad NOTEQOP expresion_relacional

  144 expresion_and: expresion_igualdad
  145              | expresion_and ANDOP expresion_igualdad

  146 expresion_exclusiva_or: expresion_and
  147                       | expresion_exclusiva_or ELEVADOOP expresion_and

  148 expresion_inclusiva_or: expresion_exclusiva_or
  149                       | expresion_inclusiva_or OROP expresion_exclusiva_or

  150 expresion_logica_and: expresion_inclusiva_or
  151                     | expresion_logica_and AND expresion_inclusiva_or

  152 expresion_logica_or: expresion_logica_and
  153                    | expresion_logica_or OR expresion_logica_and

  154 expresion_condicional: expresion_logica_or

  155 expresion_asignacion: expresion_condicional
  156                     | expresion_unaria operador_asignacion expresion_asignacion

  157 expresion_vector: expresion_asignacion
  158                 | expresion_vector COLON expresion_asignacion

  159 expresion: expresion_asignacion
  160          | expresion COLON expresion_asignacion

  161 identificador: IDENTIFICATOR


Terminals, with rules where they appear

$end (0) 0
error (256)
VOID (258) 1
FLOAT (259) 2
CONSTANT (260)
STRING (261) 105
STRING_C (262) 106
IDENTIFICATOR (263) 30 31 68 69 70 71 72 73 74 75 76 78 110 115 161
COMMENT (264)
CARACTER (265) 108
LCORCH (266) 64 65 66 67 110 112
RCORCH (267) 64 65 66 67 110 112
LPARENT (268) 30 31 87 88 89 93 96 102 107
RPARENT (269) 30 31 87 88 89 93 96 102 107
LKEY (270) 20 30 31 56 60 61 87 88 89 91 93 96
RKEY (271) 20 30 31 56 60 61 87 88 89 91 93 96
POINT (272) 111
INC (273) 116 118
DEC (274) 117 119
ANDOP (275) 97 145
MULTOP (276) 10 13 17 69 71 73 76 98 127
ADDOP (277) 131
MINUSOP (278) 132
VIRGUOP (279) 99
NOTOP (280) 100
DIVOP (281) 128
MODOP (282) 129
LDESP (283) 134
RDESP (284) 135
LOWOP (285) 137
GREATOP (286) 138
LOWEQOP (287) 139
GREATEQOP (288) 140
EQUOP (289) 142
NOTEQOP (290) 143
ELEVADOOP (291) 147
OROP (292) 149
AND (293) 151
OR (294) 153
TWOPOINT (295) 55 56 91
SEMICOLON (296) 20 51 52 53 54 57 58 79 80 81 82 83 84 85 88 96
ASIGOP (297) 83 85 120
PRODASIGOP (298) 121
DIVASIGOP (299) 122
MODASIGOP (300) 123
SUMASIGOP (301) 124
RESASIGOP (302) 125
COLON (303) 11 12 13 15 16 17 28 61 63 74 75 76 158 160
BREAK (304) 51
CASE (305) 56
CHAR (306) 3
CONST (307)
DEFAULT (308) 91
DO (309) 88
DOUBLE (310) 4
ELSE (311)
FOR (312) 96
GOTO (313) 52
IF (314) 87
INT (315) 5
RETURN (316) 53 54
STRUCT (317) 21
SWITCH (318) 89
TYPEDEF (319) 29
UNION (320) 22
WHILE (321) 88 93
ESPACIO (322)
NUMERO (323) 56 64 65 104


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
tipo (70)
    on left: 1 2 3 4 5, on right: 30 31 68 69 70 71 72 73 102
declaraciones_variables_struct (71)
    on left: 6 7, on right: 7 20
identificadores_struct (72)
    on left: 8 9 10 11 12 13 14, on right: 20
mas_identificadores_struct (73)
    on left: 15 16 17 18, on right: 11 12 13 15 16 17
especificacion_struct_o_union (74)
    on left: 19 20, on right: 86
struct_o_union (75)
    on left: 21 22, on right: 19 20 26 78
programa (76)
    on left: 23, on right: 0
parametro (77)
    on left: 24 25 26, on right: 27 28
paso_parametros (78)
    on left: 27 28, on right: 28 30
definicion_tipo (79)
    on left: 29, on right: 34
declaracion_funcion (80)
    on left: 30 31, on right: 32
declaraciones (81)
    on left: 32 33 34 35, on right: 23 32 33 34
declaraciones_variables (82)
    on left: 36 37, on right: 36 38
posible_declaraciones_variables (83)
    on left: 38 39, on right: 30 31
sentencia (84)
    on left: 40 41 42 43, on right: 44 45 55
lista_sentencias (85)
    on left: 44 45, on right: 30 31 45 56 87 88 91 93 96
sentencias_control (86)
    on left: 46 47 48 49 50, on right: 40
sentencias_salto (87)
    on left: 51 52 53 54, on right: 41
sentencias_etiquetas (88)
    on left: 55 56, on right: 42 90
sentencias_expresiones (89)
    on left: 57 58, on right: 43
inicializador (90)
    on left: 59 60 61, on right: 62 63 85
lista_inicializador (91)
    on left: 62 63, on right: 60 61 63
corchetes (92)
    on left: 64 65 66 67, on right: 9 12 16 25 65 67 75 80 84 85
declaracion_variable_simple_parametro (93)
    on left: 68 69, on right: 24 25
declaracion_variable_simple_struct (94)
    on left: 70 71, on right: 79 80
declaracion_variable_simple (95)
    on left: 72 73, on right: 82 83 84 85
mas_identificadores (96)
    on left: 74 75 76 77, on right: 74 75 76 80 82 84
declaracion_struct_struct (97)
    on left: 78, on right: 81
declaracion_variables_struct (98)
    on left: 79 80 81, on right: 6 7
declaracion_variables (99)
    on left: 82 83 84 85 86, on right: 29 33 36 37
sentencia_if (100)
    on left: 87, on right: 47
sentencia_do_while (101)
    on left: 88, on right: 50
sentencia_switch (102)
    on left: 89, on right: 49
muchas_sentencias_etiquetas (103)
    on left: 90 91 92, on right: 89 90
sentencia_while (104)
    on left: 93, on right: 46
posible_expresion (105)
    on left: 94 95, on right: 96
sentencia_for (106)
    on left: 96, on right: 48
operador_unario (107)
    on left: 97 98 99 100, on right: 115
expresion_cast (108)
    on left: 101 102, on right: 102 126 127 128 129
expresion_primaria (109)
    on left: 103 104 105 106 107 108, on right: 109
expresion_asignable (110)
    on left: 109 110 111, on right: 111 114 118 119
posible_matriz (111)
    on left: 112 113, on right: 110
expresion_unaria (112)
    on left: 114 115 116 117 118 119, on right: 101 116 117 156
operador_asignacion (113)
    on left: 120 121 122 123 124 125, on right: 156
expresion_multiplicativa (114)
    on left: 126 127 128 129, on right: 127 128 129 130 131 132
expresion_aditiva (115)
    on left: 130 131 132, on right: 131 132 133 134 135
expresion_shift (116)
    on left: 133 134 135, on right: 134 135 136 137 138 139 140
expresion_relacional (117)
    on left: 136 137 138 139 140, on right: 137 138 139 140 141 142
    143
expresion_igualdad (118)
    on left: 141 142 143, on right: 142 143 144 145
expresion_and (119)
    on left: 144 145, on right: 145 146 147
expresion_exclusiva_or (120)
    on left: 146 147, on right: 147 148 149
expresion_inclusiva_or (121)
    on left: 148 149, on right: 149 150 151
expresion_logica_and (122)
    on left: 150 151, on right: 151 152 153
expresion_logica_or (123)
    on left: 152 153, on right: 153 154
expresion_condicional (124)
    on left: 154, on right: 155
expresion_asignacion (125)
    on left: 155 156, on right: 156 157 158 159 160
expresion_vector (126)
    on left: 157 158, on right: 110 112 158
expresion (127)
    on left: 159 160, on right: 54 58 83 87 88 89 93 94 107 160
identificador (128)
    on left: 161, on right: 8 9 10 11 12 13 15 16 17 19 26 52 55 59
    103 111


state 0

    0 $accept: . programa $end

    $default  reduce using rule 35 (declaraciones)

    programa       go to state 1
    declaraciones  go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

   23 programa: declaraciones .
   32 declaraciones: declaraciones . declaracion_funcion
   33              | declaraciones . declaracion_variables
   34              | declaraciones . definicion_tipo

    VOID     shift, and go to state 4
    FLOAT    shift, and go to state 5
    CHAR     shift, and go to state 6
    DOUBLE   shift, and go to state 7
    INT      shift, and go to state 8
    STRUCT   shift, and go to state 9
    TYPEDEF  shift, and go to state 10
    UNION    shift, and go to state 11

    $default  reduce using rule 23 (programa)

    tipo                           go to state 12
    especificacion_struct_o_union  go to state 13
    struct_o_union                 go to state 14
    definicion_tipo                go to state 15
    declaracion_funcion            go to state 16
    declaracion_variable_simple    go to state 17
    declaracion_variables          go to state 18


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    1 tipo: VOID .

    $default  reduce using rule 1 (tipo)


state 5

    2 tipo: FLOAT .

    $default  reduce using rule 2 (tipo)


state 6

    3 tipo: CHAR .

    $default  reduce using rule 3 (tipo)


state 7

    4 tipo: DOUBLE .

    $default  reduce using rule 4 (tipo)


state 8

    5 tipo: INT .

    $default  reduce using rule 5 (tipo)


state 9

   21 struct_o_union: STRUCT .

    $default  reduce using rule 21 (struct_o_union)


state 10

   29 definicion_tipo: TYPEDEF . declaracion_variables

    VOID    shift, and go to state 4
    FLOAT   shift, and go to state 5
    CHAR    shift, and go to state 6
    DOUBLE  shift, and go to state 7
    INT     shift, and go to state 8
    STRUCT  shift, and go to state 9
    UNION   shift, and go to state 11

    tipo                           go to state 19
    especificacion_struct_o_union  go to state 13
    struct_o_union                 go to state 14
    declaracion_variable_simple    go to state 17
    declaracion_variables          go to state 20


state 11

   22 struct_o_union: UNION .

    $default  reduce using rule 22 (struct_o_union)


state 12
